--- a/src/plugin.yml
+++ b/src/plugin.yml
@@ -1,6 +1,6 @@
 name: FrameStore
 main: me.maciekmm.FrameStore.FrameStore
-version: PR1.4.0
+version: PR1.4.1
 website: http://maciekmm.tk
 author: maciekmm
 depend: [Vault]
@@ -12,17 +12,17 @@ commands:
       permission: framestore.admin
 permissions:
    framestore.use.buy.adminshop:
-      description: Let you buy from adminshops
+      description: Lets you buy from adminshops
       default: true
    framestore.use.buy.normal:
-      description: Let you buy from regular shops
+      description: Lets you buy from regular shops
       default: true
    framestore.use.sell.adminshops:
-      description: Let you sell to adminshops
+      description: Lets you sell to adminshops
       default: true
    framestore.use.sell.normal:
-      description: Let you sell to regular shops
+      description: Lets you sell to regular shops
       default: true
    framestore.admin:
-      description: Let you create adminshops, reload and save data.
+      description: Lets you create adminshops, reload and save data.
       default: false
